--- a/docs/mechanical/fusion/start.mdx
+++ b/docs/mechanical/fusion/start.mdx
@@ -4,6 +4,19 @@ hide_table_of_contents: true
 sidebar_position: 1
 ---
 
-TEXT
+The following text will walk you through how to set up and generate G-Code from Fusion.
+If you do not have access to Fusion or the shared work space refer to [**Fusion Sign-Up**](https://frc-team-4143.github.io/docs/mechanical/fusion/fusion-sign-up)
 
-Getting Added to workspace
+~Before starting check the Fusion Team workspace for the part you are looking for, if it is not there continue.
+
+1. Part Download
+
+import onshape_export from '@site/static/img/mechanical/Fusion/Onshape_Export.png';
+
+<img src={onshape_export} width="1000"/>
+
+import onshape_download from '@site/static/img/mechanical/Fusion/Onshape_Download.png';
+
+|ID|Tool|
+|---|---|
+|hi|<img src={onshape_download} width="400"/>
