--- a/docs/mechanical/fusion/fusion-sign-up.mdx
+++ b/docs/mechanical/fusion/fusion-sign-up.mdx
@@ -4,4 +4,17 @@ hide_table_of_contents: true
 sidebar_position: 10
 ---
 
-Requestion education account
+1. Go to Autodesk’s Education Portal
+- Visit the [Autodesk Education Software Page](https://www.autodesk.com/education/edu-software/fusion)
+
+2. Create an Autodesk Account
+- Click “Get Started” or “Sign In” if you already have an account.
+    - Use your school email address if possible—it helps with verification
+
+3. Verify Your Educational Status
+- Select your role - Student.
+    - Choose  Mentor if you're a mentor working with a FIRST team.
+- Provide your school or organization name and expected graduation date.
+
+4. Join Mars/Wars Project Team.
+- ....Ask Mr. Shoff?
