"Update machining docs and package-lock.json"

--- a/docs/mechanical/machining/lathe.mdx
+++ b/docs/mechanical/machining/lathe.mdx
@@ -4,5 +4,31 @@ hide_table_of_contents: true
 sidebar_position: 7
 ---
 
-TEXT
+# Machine Operation:
+
+### Clamping Stock: ??
+
+##### Material Supports: (Optional)
+Addition support should be used to brace longer stock, or to keep stock stable durring precise or aggressive turning operation.
+
+### Tool Selection:
+
+##### Drilling:
+Drilling involves
+Drilling is used to 
+
+##### Turning:
+Turning is used to reduce the diameter or length of a workpiece to a desirered value.
+
+##### Parting:
+Parting is used to cut off a finished part from the remaining stock material.
+
+##### Boering:
+Boering is used to increase the the internal diameter (ID) of a workpeice.
+:::note
+Boering cannot make a new hole, only expand it.
+:::
+
+### Tool setup
+
 
