--- a/docs/mechanical/machining/milling_cnc.mdx
+++ b/docs/mechanical/machining/milling_cnc.mdx
@@ -4,7 +4,7 @@ hide_table_of_contents: true
 sidebar_position: 3
 ---
 
-Computer numerical control (CNC) Milling is a form of [milling](https://frc-team-4143.github.io/docs/mechanical/machining/milling_manual) where the 
+Computer numerical control (CNC) Milling is a form of [milling](./milling_manual) where the 
 
 
 
