fixes broken links

--- a/docs/software/java/classes-objs.mdx
+++ b/docs/software/java/classes-objs.mdx
@@ -62,7 +62,7 @@ public class ShooterSubsystem {
 :::note 1 Class Per File
 Each java file can only contain one public class, and the name of the file must match the name of the public class. For
 example, if you have a class named `ShooterSubsystem`, the file should be named `ShooterSubsystem.java`. There can be
-multiple classes in a single file, but only one can be [public](#-access-modifiers)
+multiple classes in a single file, but only one can be [public](#access-modifiers)
 :::
 
 If a variable is defined inside a class, it is called a field or attribute. Fields are used to store data that is
