--- a/docs/software/overview.mdx
+++ b/docs/software/overview.mdx
@@ -6,14 +6,22 @@ sidebar_position: 0
 
 # Software Docs
 
-## [Software Tools](/docs/category/software-tools)
+Welcome to the software documentation for the MARS/WARS robotics team! This documentation covers everything you need to know about programming and software development for our robots.
 
-## [Java Basics](/docs/category/java-basics)
+## What You'll Find Here
 
-## [Robot Development](/docs/category/robot-development)
+**Software Tools** - Essential development tools including Git, VS Code, and robot-specific software
 
-## [Control Concepts](/docs/category/control-concepts)
+**Java Basics** - Fundamental Java programming concepts including variables, classes, loops, and more
 
-## [Robot Communications](/docs/category/robot-communications)
+**Robot Development** - WPILib framework, subsystems, commands, and robot programming patterns
 
-## [Lessons Learned](/docs/software/lessons.mdx)
+**Advanced Controls** - Control theory, PID controllers, and advanced robot control concepts  
+
+**Robot Communications** - Networking, protocols, and communication between robot components
+
+**Lessons Learned** - Best practices and insights from our development experience
+
+Navigate through the sections using the sidebar to explore specific topics and tutorials.
+
+## [Lessons Learned](/docs/software/lessons)
