fixes spelling and grammar

--- a/docs/software/java/vars-dt.mdx
+++ b/docs/software/java/vars-dt.mdx
@@ -13,8 +13,8 @@ easily identify what they contain.
 ---
 
 ## Declaring a Variable
-You can create a variable without assigning a value to it. You would do this is you plan on using it, but do not have a
-value to assign at creation. The syntax is `[type] [name]` which can be seen is examples below.
+You can create a variable without assigning a value to it. You would do this if you plan on using it, but do not have a
+value to assign at creation. The syntax is `[type] [name]` which can be seen in examples below.
 ```java
 int team_number;
 double pi;
@@ -78,7 +78,7 @@ int team_number = 4143;
 <td> A decimal number </td>
 <td>
 ```java
-double pi = 3.1415
+double pi = 3.1415;
 ```
 </td>
 </tr>
@@ -132,7 +132,7 @@ if(current_state == STATE.SCORE){
 }
 ```
 Sure we could use `ints` to represent our states where 0 is `IDLE`, 1 is `SCORE`, 2 is `HOME`..., but this makes our
-code easier to understand and much more readable to a unfamiliar developer.
+code easier to understand and much more readable to an unfamiliar developer.
 :::tip Under the Hood
 The above "use `ints` to represent our states" comment is actually what the enum is doing under the hood. You can
 actually use an enum to represent anything you would like. Check out our
