--- a/docs/software/lessons.mdx
+++ b/docs/software/lessons.mdx
@@ -45,4 +45,4 @@ mistakes or tips we have learned.
     - Having an elite auto takes lots of tuning down to the quarter second. We need to ensure we put priority on auto
     tuning time over quality-of-life robot features.
 
-[^1]: Learned in ***2025 REFFSCAPE***
+[^1]: Learned in ***2025 REEFSCAPE***
