--- a/docs/software/overview.mdx
+++ b/docs/software/overview.mdx
@@ -8,20 +8,6 @@ sidebar_position: 0
 
 Welcome to the software documentation for the MARS/WARS robotics team! This documentation covers everything you need to know about programming and software development for our robots.
 
-## What You'll Find Here
-
-**Software Tools** - Essential development tools including Git, VS Code, and robot-specific software
-
-**Java Basics** - Fundamental Java programming concepts including variables, classes, loops, and more
-
-**Robot Development** - WPILib framework, subsystems, commands, and robot programming patterns
-
-**Advanced Controls** - Control theory, PID controllers, and advanced robot control concepts  
-
-**Robot Communications** - Networking, protocols, and communication between robot components
-
-**Lessons Learned** - Best practices and insights from our development experience
-
-Navigate through the sections using the sidebar to explore specific topics and tutorials.
-
-## [Lessons Learned](/docs/software/lessons)
+## Getting Started
+If you are looking to start programming for the team, it is important to join our [GitHub Organization](https://github.com/FRC-Team-4143).
+Once you have create a GitHub account, reach out to a mentor to get added to the organization.
