adds some basic direction to new pages

--- a/docs/software/robot_dev/testing.mdx
+++ b/docs/software/robot_dev/testing.mdx
@@ -9,14 +9,21 @@ import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
 # Robot Testing
+Obviously once our code it written and builds we need to test it to make sure it works as expected.
+Testing can be done both on the physical robot as well as in simulation.
+Each has its own advantages and disadvantages.
 
 <Tabs>
   <TabItem value="phy" label="Physical 🦾" default>
     ## Testing on the Physical Robot
 
+
+
   </TabItem>
   <TabItem value="sim" label="Simulation 💻">
     ## Testing in Simulation
+
+
 
   </TabItem>
 </Tabs>
