--- a/docs/software/comms/pwm.mdx
+++ b/docs/software/comms/pwm.mdx
@@ -13,6 +13,7 @@ to a continuous pulse at a given frequency.
 
 <img src={pwm} width="500" style={{backgroundColor: 'white', padding: '10px', borderRadius: '8px', display: 'block', marginTop: '10px'}}/>
 
+## Common FRC Uses
 PWM is commonly used in FRC to control motor controllers and servos. The roboRIO outputs a PWM signal to the motor controller,
 which then interprets the width of the pulse to determine the speed and direction of the motor. A wider pulse corresponds to a 
 higher speed, while a narrower pulse corresponds to a lower speed.
