adds codeacademy link from wpilib docs

--- a/docs/software/java/quick-ref.mdx
+++ b/docs/software/java/quick-ref.mdx
@@ -7,7 +7,8 @@ sidebar_position: 0
 # Quick Reference Guide
 This is a quick reference guide for Java programming. It provides an overview of the key concepts throughout this
 section. It is not meant to be a comprehensive guide, but rather a quick reference for the most common concepts and
-syntax used in Java programming.
+syntax used in Java programming. WPILib recommends taking the [Learn Java](https://www.codecademy.com/learn/learn-java) course on Codeacademy for a more in-depth
+understanding of Java programming.
 
 ## [**Variables & Data Types**](./vars-dt.mdx)
 - Variables are containers for data. Always assign a default value.
