adds basic slides to topics for proof of concept

--- a/docs/software/training/control-theory.mdx
+++ b/docs/software/training/control-theory.mdx
@@ -6,3 +6,5 @@ sidebar_position: 8
 ---
 
 # WIP
+
+<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTMq41unK0_CHxglAA-61hPvOtg72D5kyDtUtFzfjjOwKXZty6YWlCi6mc7PGsWaZ9VTbDWWyz_Koon/pubembed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
