--- a/docs/software/training/computer-vision.mdx
+++ b/docs/software/training/computer-vision.mdx
@@ -6,3 +6,5 @@ sidebar_position: 9
 ---
 
 # WIP
+
+<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vT5JviDrAQzDRszoERR-5dwX_16MijoJpQVzg5lahy-vghUnZhSWAVGFyDAmUZmcG9T1XTwW7MDodLP/pubembed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
